--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-     
-</body>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+
+  <body class="bg-pink-500 w-full h-screen flex justify-center items-center">
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h3>hello</h3>
+  </body>
 </html>
