--- a/index.html
+++ b/index.html
@@ -3,13 +3,157 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Shopping Cart</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-pink-500 w-full h-screen flex justify-center items-center">
-    <h1>hello</h1>
-    <h2>hello</h2>
-    <h3>hello</h3>
+  <body class="bg-white text-gray-800">
+    <main class="max-w-6xl mx-auto px-6 py-10">
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+        <!-- LEFT -->
+        <section class="lg:col-span-2">
+          <div class="flex justify-between items-center mb-8">
+            <h1 class="text-2xl font-bold">Shopping Cart</h1>
+            <span class="text-sm text-gray-500 font-medium">3 Items</span>
+          </div>
+
+          <!-- Table Head -->
+          <div
+            class="grid grid-cols-12 text-[11px] text-gray-400 pb-3 border-b font-medium"
+          >
+            <div class="col-span-6">PRODUCT DETAILS</div>
+            <div class="col-span-2 text-center">QUANTITY</div>
+            <div class="col-span-2 text-right">PRICE</div>
+            <div class="col-span-2 text-right">TOTAL</div>
+          </div>
+
+          <!-- Item 1 -->
+          <div class="grid grid-cols-12 items-center py-7 border-b">
+            <div class="col-span-6 flex gap-4">
+              <img src="image/fifa19.jpg" class="w-14 h-14" />
+              <div>
+                <p class="text-sm font-semibold">Fifa 19</p>
+                <p class="text-xs text-red-500 font-medium">PS4</p>
+                <p class="text-xs text-gray-400 mt-1 cursor-pointer">Remove</p>
+              </div>
+            </div>
+
+            <div
+              class="col-span-2 flex justify-center items-center gap-3 text-sm font-medium"
+            >
+              <span>−</span>
+              <span class="border px-3 py-1 font-medium">2</span>
+              <span>+</span>
+            </div>
+
+            <div class="col-span-2 text-right text-sm font-medium">£44.00</div>
+            <div class="col-span-2 text-right text-sm font-semibold">
+              £88.00
+            </div>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="grid grid-cols-12 items-center py-7 border-b">
+            <div class="col-span-6 flex gap-4">
+              <img src="image/glacier.jpg" class="w-14 h-14" />
+              <div>
+                <p class="text-sm font-semibold">Glacier White 500GB</p>
+                <p class="text-xs text-red-500 font-medium">PS4</p>
+                <p class="text-xs text-gray-400 mt-1 cursor-pointer">Remove</p>
+              </div>
+            </div>
+
+            <div
+              class="col-span-2 flex justify-center items-center gap-3 text-sm font-medium"
+            >
+              <span>−</span>
+              <span class="border px-3 py-1 font-medium">1</span>
+              <span>+</span>
+            </div>
+
+            <div class="col-span-2 text-right text-sm font-medium">£249.99</div>
+            <div class="col-span-2 text-right text-sm font-semibold">
+              £249.99
+            </div>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="grid grid-cols-12 items-center py-7">
+            <div class="col-span-6 flex gap-4">
+              <img src="image/headset.jpg" class="w-14 h-14" />
+              <div>
+                <p class="text-sm font-semibold">Platinum Headset</p>
+                <p class="text-xs text-red-500 font-medium">PS4</p>
+                <p class="text-xs text-gray-400 mt-1 cursor-pointer">Remove</p>
+              </div>
+            </div>
+
+            <div
+              class="col-span-2 flex justify-center items-center gap-3 text-sm font-medium"
+            >
+              <span>−</span>
+              <span class="border px-3 py-1 font-medium">1</span>
+              <span>+</span>
+            </div>
+
+            <div class="col-span-2 text-right text-sm font-medium">£119.99</div>
+            <div class="col-span-2 text-right text-sm font-semibold">
+              £119.99
+            </div>
+          </div>
+
+          <div
+            class="mt-8 text-sm text-purple-600 flex items-center gap-2 cursor-pointer font-medium"
+          >
+            ← Continue Shopping
+          </div>
+        </section>
+
+        <!-- RIGHT -->
+        <aside class="bg-gray-50 p-6 rounded-sm">
+          <h2 class="text-2xl font-bold">Order Summary</h2>
+
+          <div class="space-y-5 text-sm">
+            <div class="flex justify-between text-gray-600 font-medium">
+              <span>ITEMS 3</span>
+              <span class="text-gray-700 font-semibold">£457.98</span>
+            </div>
+
+            <div>
+              <p class="text-sm font-semibold">SHIPPING</p>
+              <select
+                class="w-full border bg-white px-3 py-2 text-sm font-medium"
+              >
+                <option>Standard Delivery - £5.00</option>
+              </select>
+            </div>
+
+            <div>
+              <p class="text-sm font-semibold">PROMO CODE</p>
+              <input
+                class="w-full border px-3 py-2 text-sm mb-3 bg-white"
+                placeholder="Enter your code"
+              />
+              <button
+                class="w-full bg-[#f26c6c] text-white py-2 text-sm font-semibold"
+              >
+                APPLY
+              </button>
+            </div>
+
+            <div class="border-t pt-4 flex justify-between">
+              <span class="font-semibold">TOTAL COST</span>
+              <span class="font-semibold">£462.98</span>
+            </div>
+
+            <button
+              class="w-full bg-[#5b4ed7] text-white py-3 text-sm font-semibold"
+            >
+              CHECKOUT
+            </button>
+          </div>
+        </aside>
+      </div>
+    </main>
   </body>
 </html>
